# multi-gpu-ref

./: .gitignore  README.md
multigpubandwidthtests/: all_plotter.sh
multigpubandwidthtests/selfcawarempi/: CMakeLists.txt  caware_bandwidth.sh  compile.sh  slurm_dispatch.sh
multigpubandwidthtests/selfcawarempi/impl/: CMakeLists.txt  main.cu
multigpubandwidthtests/selfnccl/: CMakeLists.txt  compile.sh  nccl_bandwidth.sh  slurm_dispatch.sh
multigpubandwidthtests/selfnccl/impl/: CMakeLists.txt  main.cu
multigpubandwidthtests/selfnvshmem/: CMakeLists.txt  compile.sh  nvs_bandwidth.sh  slurm_dispatch.sh
multigpubandwidthtests/selfnvshmem/impl/: CMakeLists.txt  main.cu
multigpujacobi/: CMakeLists.txt  all_bench.sh  caware_bench.sh  caware_overlap_bench.sh  compile_alex.sh  nccl_bench.sh  nccl_overlap_bench.sh  nccl_overlap_graph_bench.sh  nvs_bench.sh  singlegpu_bench.sh
multigpujacobi/cmake/: NVTX.cmake
multigpujacobi/headers/: utils.h
multigpujacobi/impl/: CMakeLists.txt
multigpujacobi/impl/caware/: CMakeLists.txt  jacobi.cu
multigpujacobi/impl/caware_overlap/: CMakeLists.txt  jacobi.cu
multigpujacobi/impl/nccl_overlap/: CMakeLists.txt  jacobi.cu
multigpujacobi/impl/nccl_overlap_graph/: CMakeLists.txt  jacobi.cu
multigpujacobi/impl/nvshmem/: CMakeLists.txt  jacobi.cu
multigpujacobi/impl/singlegpu/: CMakeLists.txt  jacobi.cu
